--- a/CAMS/configs/mit-states.yml
+++ b/CAMS/configs/mit-states.yml
@@ -18,7 +18,7 @@ train:
   seed: 0
   val_metric: AUC
   save_final_model: True
-  save_path: weight
+  save_path: CAMS/weight
   att_loss_weight: 0.5
   obj_loss_weight: 0.5
   com_loss_weight: 1
@@ -27,9 +27,10 @@ train:
 test:
   open_world: false  # If it’s the open-world setting, just set it to "true"
   eval_batch_size: 64
-  feasibility: feasibilities/feasibility_mit.pt
+  feasibility: CAMS/feasibilities/feasibility_mit.pt
   threshold: 0.3625205941
   threshold_trials: 50
   beta: 0.85  
 
   load_model: false # Path of the trained model
+
