--- a/CAMS/configs/utzappos.yml
+++ b/CAMS/configs/utzappos.yml
@@ -18,7 +18,7 @@ train:
   seed: 0
   val_metric: AUC
   save_final_model: True
-  save_path: weight
+  save_path: CAMS/weight
   att_loss_weight: 0.5
   obj_loss_weight: 0.5
   com_loss_weight: 1
@@ -27,9 +27,10 @@ train:
 test:
   open_world: True   # If it’s the open-world setting, just set it to "true"
   eval_batch_size: 64  
-  feasibility: feasibilities/feasibility_zp.pt 
+  feasibility: CAMS/feasibilities/feasibility_zp.pt 
   threshold: 0.4705232256
   threshold_trials: 50  
   beta: 0.65 
 
   load_model: false # Path of the trained model
+
